# face-fling

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  setup-models.sh  skills-lock.json
.agents/skills/spec-driven/: CHANGELOG.md  README.md  SKILL.md
.agents/skills/spec-driven/references/: archive.md  baseline-discovery.md  codebase-exploration.md  codebase-mapping.md  coding-principles.md  doc-extraction.md  implement.md  initialize.md  plan.md  project-init.md  research.md  roadmap.md  spec-writing.md  status-specs.md  status-workflow.md  task-decomposition.md  tasks.md  validate.md
.agents/skills/spec-driven/templates/: CHANGELOG.md  PROJECT.md  ROADMAP.md  archive.md  plan.md  spec.md  tasks.md
docs/: ARCHITECTURE.md  PROJECT_ROADMAP.md
docs/specs/: 001-folder-scanner.md  002-face-detector.md  003-face-clusterer.md  SPEC_TEMPLATE.md
resources/: FaceFling.icns  Info.plist  face-fling.qrc
src/: main.cpp
src/app/: FaceGridWidget.cpp  FaceGridWidget.h  FaceThumbnailWidget.cpp  FaceThumbnailWidget.h  MainWindow.cpp  MainWindow.h  PersonListWidget.cpp  PersonListWidget.h  ScanProgressDialog.cpp  ScanProgressDialog.h
src/core/: Clusterer.cpp  Clusterer.h  Exporter.cpp  Exporter.h  Indexer.cpp  Indexer.h  Scanner.cpp  Scanner.h
src/models/: Cluster.h  Face.h  Person.h  Photo.h
src/services/: Database.cpp  Database.h  FaceService.cpp  FaceService.h  ImageLoader.cpp  ImageLoader.h
tests/: CMakeLists.txt  test_clustering.cpp  test_database.cpp  test_scanner.cpp
